# GitlabCleaner

./: Cargo.toml  LICENSE.md  README.md
src/: actors.rs  main.rs
src/actors/: displ.rs  event.rs  git.rs
