[package]
name = "gitlab-cleaner"
version = "0.1.0"
authors = ["Lucas <lucas@pixelized.studio>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.165", features = ["derive"] }
serde_json = "1.0.99"
reqwest = { version = "0.11.21", features = ["json", "blocking"] }
lazy_static = "1.4.0"
clap = { version = "4.4.2", features = ["derive"] }
indicatif = "0.17.7"
futures = "0.3.29"
tiny-tokio-actor = "0.3.5"
tokio = { version = "1.34.0", features = ["full"] }

